--- a/style.css
+++ b/style.css
@@ -1,3 +1,89 @@
+@font-face {
+    font-family: TitilliumWeb;
+    src: url(fonts/TitilliumWeb-Regular.ttf);
+}
+
 * {
     width: 1024px;
+    margin: auto;
+    
+}
+
+body {
+    width: 1024px;
+}
+
+header {
+    height: 90px;
+    background-color: #555;
+    align-items: center;
+    justify-items: center;
+    font-size: 1.5em;
+}
+
+nav > div > ul{
+    display: inline-block;
+}
+
+main {
+    font-family: TitilliumWeb;
+}
+
+ul > li {
+    
+    text-align: center;
+    font-family: TitilliumWeb;
+    font-style: italic;
+    font-weight: bold;
+    color: #555;
+}
+
+li {
+    list-style: none;
+}
+
+a {
+    text-decoration: none;
+}
+
+.square {
+    display: inline-block;
+    width: 200px;
+    height: 200px;
+    background-color: #aaa;
+    overflow: hidden;
+    position: relative;
+    top: 1px;
+    /* left: 10px; */
+    border: 8px solid #ddd;
+    border-radius: 110px;
+}
+
+div > img {
+    width: 400px;
+    position: relative;
+    bottom: 20px;
+    right: 75px;
+}
+
+div.wrapper {
+    display: grid;
+    width: 100%;
+    grid-template-columns: 240px 1fr;
+
+}
+
+div.my-name {
+    width: 100%;
+    font-size: 1.7em;
+    font-weight: bolder;
+    color: #333;
+    padding: 15px;
+    margin: 0px;
+    text-align: start;
+
+}
+
+.hidden-text {
+    display: none;
 }
