--- a/style.css
+++ b/style.css
@@ -6,30 +6,41 @@
 * {
     width: 1024px;
     margin: auto;
-    
+    font-family: TitilliumWeb;
 }
-
+/* 
 body {
     width: 1024px;
-}
+} */
 
 header {
     height: 90px;
     background-color: #555;
-    align-items: center;
-    justify-items: center;
     font-size: 1.5em;
 }
 
-nav > div > ul{
-    display: inline-block;
-}
 
 main {
-    font-family: TitilliumWeb;
+    background-color: #888;
 }
 
-ul > li {
+footer {
+    display: grid;
+    grid-template-columns: 3fr 300px;
+    height: 120px;
+    background-color: #555;
+
+}
+
+.hidden-text {
+    display: none;
+}
+
+/* nav > div > ul{
+    display: inline-block;
+} */
+
+nav ul > li {
     
     text-align: center;
     font-family: TitilliumWeb;
@@ -38,12 +49,13 @@ ul > li {
     color: #555;
 }
 
-li {
+li.navi {
     list-style: none;
 }
 
 a {
     text-decoration: none;
+    color: #afa;
 }
 
 .square {
@@ -84,6 +96,38 @@ div.my-name {
 
 }
 
-.hidden-text {
-    display: none;
+.portfolio {
+    font-size: 1.5em;
+    padding: 20px;
+    text-align: left;
+    margin-left: 10px;
+
+}
+
+.form {
+    width: 100%;
+    font-size: 2em;
+    font-weight: bolder;
+    margin-top: 25px;
+    padding-left: 30px;
+    opacity: 0.8;
+}
+
+.contact {
+    width: 100%;
+    font-size: 1em;
+    margin-left: 30px;
+    margin-top: 25px;
+
+}
+
+input {
+    width: 150px;
+    height: 50px;
+    border: 7px solid #ada;
+    border-radius: 20px;
+    font-size: 25px;
+    font-weight: bold;
+    margin-top: 10px;
+    margin-left: 300px;
 }
